Add minor changes

--- a/src/Site/InterfaceBundle/Resources/views/Default/index.html.twig
+++ b/src/Site/InterfaceBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,5 @@
 {% extends "::base.html.twig" %}
+{% block title %}Site{% endblock %}
 
 {% block body %}
     Link to <a href="{{ path('admin_interface_default_index') }}">Admin</a>
