--- a/src/SuperAdmin/InterfaceBundle/Resources/views/base.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/base.html.twig
@@ -1,5 +1,5 @@
 {% extends "::base.html.twig" %}
-
+{% block title %}Super Admin{% endblock %}
 {% block stylesheets %}
     {% stylesheets
         'assets/css/bootstrap.min.css'
