--- a/src/Admin/InterfaceBundle/Resources/views/Default/index.html.twig
+++ b/src/Admin/InterfaceBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,5 @@
 {% extends "::base.html.twig" %}
+{% block title %}Admin{% endblock %}
 
 {% block body %}
     Link to <a href="{{ path('superadmin_interface_default_index') }}">SuperAdmin</a>
