Create entity and add new link

--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Default/index.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Default/index.html.twig
@@ -2,6 +2,6 @@
 
 {% block body %}
     <div>
-        Object - <a class="fa fa-plus text-success" href=""> Create</a> - <a class="fa fa-edit text-warning" href=""> Edit</a> - <a class="fa fa-list" href=""> List</a>
+        Object - <a class="fa fa-plus text-success" href="{{path('superadmin_interface_object_crud')}}"> Create</a> - <a class="fa fa-edit text-warning" href=""> Edit</a> - <a class="fa fa-list" href=""> List</a>
     </div>
 {% endblock %}
