--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Object/crud.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Object/crud.html.twig
@@ -3,10 +3,10 @@
 {% block javascripts %}
     {{parent()}}
     {% javascripts
-        'vendor/js/jquery-1.10.2.min.js'
-        'vendor/bootstrap/js/bootstrap.min.js'
-        'vendor/angular/angular.js'
-        'vendor/angular/angular-resource.min.js'
+        'assets/js/jquery.min.js'
+        'assets/js/angular.min.js'
+        'assets/js/angular-resource.min.js'
+        'assets/js/angular-route.min.js'
         '@SuperAdminInterfaceBundle/Resources/public/Object/app.js'
         '@SuperAdminInterfaceBundle/Resources/public/Object/controller.js'
     %}
@@ -15,5 +15,7 @@
 {% endblock %}
 
 {% block body %}
-    CRUD
+    <div ng-app="objectApp">
+        <div ng-view></div>
+    </div>
 {% endblock %}
