Edit javascipt on object CRUD page

--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Object/edit.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Object/edit.html.twig
@@ -1,5 +1,16 @@
 {% extends "SuperAdminInterfaceBundle::base.html.twig" %}
 
 {% block body %}
-    edit
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2>Object</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                
+            </div>
+        </div>
+    </div>
 {% endblock %}
