--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Object/list.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Object/list.html.twig
@@ -1,5 +1,12 @@
 {% extends "SuperAdminInterfaceBundle::base.html.twig" %}
 
 {% block body %}
-    list
+    <a class="btn btn-primary">Create</a>
+    <table class="table table-bordered table-striped">
+        <tr>
+            <th>Id</th>
+            <th>Name</th>
+            <th>Action</th>
+        </tr>
+    </table>
 {% endblock %}
