finish frontend for object/field

--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Object/crud.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Object/crud.html.twig
@@ -9,6 +9,8 @@
         'assets/js/angular-route.min.js'
         '@SuperAdminInterfaceBundle/Resources/public/Object/app.js'
         '@SuperAdminInterfaceBundle/Resources/public/Object/controller.js'
+        '@SuperAdminInterfaceBundle/Resources/public/Object/typeDirective.js'
+        '@SuperAdminInterfaceBundle/Resources/public/Object/filter.js'
     %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
     {% endjavascripts  %}
