--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Object/list.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Object/list.html.twig
@@ -1,12 +1,18 @@
 {% extends "SuperAdminInterfaceBundle::base.html.twig" %}
 
 {% block body %}
-    <a class="btn btn-primary">Create</a>
-    <table class="table table-bordered table-striped">
-        <tr>
-            <th>Id</th>
-            <th>Name</th>
-            <th>Action</th>
-        </tr>
-    </table>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <a class="btn btn-primary" href="#create">Create</a>
+                <table class="table table-bordered table-striped">
+                    <tr>
+                        <th>Id</th>
+                        <th>Name</th>
+                        <th>Action</th>
+                    </tr>
+                </table>
+            </div
+        </div>
+    </div>
 {% endblock %}
