Add new librairy sanitize

--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Object/crud.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Object/crud.html.twig
@@ -7,6 +7,7 @@
         'assets/js/angular.min.js'
         'assets/js/angular-resource.min.js'
         'assets/js/angular-route.min.js'
+        'assets/js/angular-sanitize.min.js'
         '@SuperAdminInterfaceBundle/Resources/public/Object/app.js'
         '@SuperAdminInterfaceBundle/Resources/public/Object/controller.js'
         '@SuperAdminInterfaceBundle/Resources/public/Object/typeDirective.js'
