--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Object/edit.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Object/edit.html.twig
@@ -5,9 +5,14 @@
         <div class="row">
             <div class="col-md-12">
                 <h2>Object</h2>
-                <a href="#list" class="btn btn-primary">List</a>
+                <a href="#list" class="btn btn-default">List</a>
+                <a ng-click="saveObject()" class="btn btn-primary">Save</a>
             </div>
         </div>
+        
+        {% verbatim %}
+        <div ng-show="alert.status" class="alert alert-{{ alert.status }}" ng-bind="alert.message"></div>
+        {% endverbatim %}
         <div class="row form-horizontal">
             <div class="col-md-12">
                 <label class="col-sm-2 control-label">Name:</label>
@@ -25,7 +30,11 @@
             <div class="col-md-12">
                 <label class="col-sm-2 control-label">Description:</label>
                 <div class="col-sm-10">
-                    <textarea name="name" class="form-control" placeholder="The object description here" ng-model="object.description"/>
+                    <textarea 
+                        name="name" 
+                        class="form-control" 
+                        placeholder="The object description here" 
+                        ng-model="object.description"/>
                 </div>
             </div>
         </div>
