--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Object/list.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Object/list.html.twig
@@ -1,5 +1,3 @@
-{% extends "SuperAdminInterfaceBundle::base.html.twig" %}
-
 {% block body %}
     <div class="container">
         <div class="row">
@@ -10,6 +8,16 @@
                         <th>Id</th>
                         <th>Name</th>
                         <th>Action</th>
+                    </tr>
+                    <tr ng-repeat="object in objects">
+                        <td ng-bind="object.id"></td>
+                        <td ng-bind="object.name"></td>
+                        <td>
+                            {% verbatim %}
+                                <a class="btn btn-danger pull-right" ng-click="deleteObject(object.id)"><i class="fa fa-trash-o">&nbspDelete</i></a>
+                                <a href="#edit/{{object.id}}" class="btn btn-primary pull-right"><i class="fa fa-edit">&nbspEdit</i></a>
+                            {% endverbatim %}
+                        </td>
                     </tr>
                 </table>
             </div
