--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Object/Directive/Type/commonRequired.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Object/Directive/Type/commonRequired.html.twig
@@ -8,29 +8,29 @@
     <div>
         <label class="col-sm-2 control-label" for="label">Label:</label>
         <div class="col-sm-10">
-            <input class="form-control" type="text" name="label" required>
+            <input class="form-control" type="text" name="label" required ng-model="field.label">
         </div>
     </div>
     <div>
         <label class="col-sm-2 control-label" for="description">Description:</label>
         <div class="col-sm-10">
-            <input class="form-control" type="text" name="description" required>
+            <input class="form-control" type="text" name="description" ng-model="field.description">
         </div>
     </div>
     <div>
         <label class="col-sm-2 control-label" for="default_value">Default Value:</label>
         <div class="col-sm-10">
-            <input class="form-control" type="text" name="default_value" required>
+            <input class="form-control" type="text" name="default_value" ng-model="field.default_value">
         </div>
     </div>
     <div>
         <label class="col-sm-2 control-label" for="required">Required:</label>
         <div class="col-sm-10">
             <label class="radio-inline">
-                <input type="radio" name="required" value="yes">yes
+                <input type="radio" name="required" value="1" ng-model="field.required">yes
             </label>
             <label class="radio-inline">
-                <input type="radio" name="required" value="no">no
+                <input type="radio" name="required" value="0" ng-model="field.required">no
             </label>
         </div>
     </div>
