--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Object/Directive/Type/text.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Object/Directive/Type/text.html.twig
@@ -7,7 +7,7 @@
     <div>
         <label class="col-sm-2 control-label" for="placeholder">Placeholder:</label>
         <div class="col-sm-10">
-            <input class="form-control" type="text" name="placeholder" required>
+            <input class="form-control" type="text" name="placeholder">
         </div>
     </div>
 {% endblock %}
