Add title to list

--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Object/list.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Object/list.html.twig
@@ -2,7 +2,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
+                <h2>Object list</h2>
                 <a class="btn btn-primary" href="#create">Create</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
                 <table class="table table-bordered table-striped">
                     <tr>
                         <th>Id</th>
