--- a/src/SuperAdmin/InterfaceBundle/Resources/views/base.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/base.html.twig
@@ -8,3 +8,9 @@
     <link rel="stylesheet" href="{{ asset_url }}" />
     {% endstylesheets %}
 {% endblock %}
+
+{% block body %}
+    <div>
+        <h1>Super Admin</h1>
+    </div>
+{% endblock %}
