Add entity generator command

--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Default/index.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                Object - <a class="fa fa-list text-success" href="{{path('superadmin_interface_object_crud')}}"> List</a>
+                Object <a class="btn btn-sm btn-primary" href="{{path('superadmin_interface_object_crud')}}"><i class="fa fa-list"></i> Manage</a>
             </div>
         </div>
     </div>
