--- a/src/SuperAdmin/InterfaceBundle/Resources/views/Object/list.html.twig
+++ b/src/SuperAdmin/InterfaceBundle/Resources/views/Object/list.html.twig
@@ -4,6 +4,7 @@
             <div class="col-md-12">
                 <h2>Object list</h2>
                 <a class="btn btn-primary" href="#create">Create</a>
+                <a class="btn btn-primary" href="{{path('superadmin_interface_default_index')}}">Back</a>
             </div>
         </div>
         {% verbatim %}
